@@ -6,6 +6,9 @@
 - Added ability to switch tasks between 0(template) and 1(waiting)
 - Added ability to delete tasks you own that are in 0 or 1 state
 - Translation to English in progress
+- Added filtering to tasks:
+  - filter by specific state 0-6/show all states
+  - show only my tasks (yes/no)
 
 0.2.3 (2016-01-20)
 - Corrected negative declination calculations
